# dev-pytopia

./: .cursorrules  pyproject.toml
documentation/: dev_pytopia_package_directory_structure.md
source_code/dev_pytopia/v1/: __init__.py
source_code/dev_pytopia/v1/neural_treehouse/: llm_thread.py
source_code/dev_pytopia/v1/neural_treehouse/llm_client_wrapper_interface/: llm_client_wrapper_factory.py  llm_client_wrapper_interface.py
source_code/dev_pytopia/v1/neural_treehouse/llm_client_wrapper_interface/wrappers/: chatgpt_client_wrapper.py
source_code/dev_pytopia/v1/neural_treehouse/response_models/: llm_code_response.py
src/pytopia/: __init__.py
tests/: quick_test.py  test_importing_this_package.py  test_this_package.py
